WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315141
(
311867@main
) PLT7 regressed for YouTube first page load
https://bugs.webkit.org/show_bug.cgi?id=315141
Summary
(311867@main) PLT7 regressed for YouTube first page load
Jean-Yves Avenard [:jya]
Reported
2026-05-19 16:55:18 PDT
311867@main
caused a significant regression in Youtube first page load test. A: 204.9 ms ± 3.8 ms B: 531.8 ms ± 11 ms
rdar://175874670
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2026-05-19 17:10:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65240
EWS
Comment 2
2026-05-19 23:18:13 PDT
Committed
313549@main
(575b7c2a1eb3): <
https://commits.webkit.org/313549@main
> Reviewed commits have been landed. Closing PR #65240 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug